--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .medalArea {
-	border:1px solid black;
+	border:1px solid transparent;
 	position:absolute;
 	width:40px; 
 	height:40px;
