--- a/style.css
+++ b/style.css
@@ -66,11 +66,18 @@ h1 {
   margin-top: 15px;
 }
 
-.medalArea {
-	border:1px solid transparent;
+.medalArea.lv48 {
+  border:1px solid transparent;
 	position:absolute;
 	width:40px; 
 	height:40px;
+}
+
+.medalArea.lv47 {
+	border:1px solid transparent;
+	position:absolute;
+	width:33px; 
+	height:34px;
 }
 
 .medal {
