--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1 {
   border-left: 3px solid transparent;
   display: block;
   padding: 10px;
-  color: #B0BEC5;
+  color: #000000;
   text-decoration: none;
   transition: ease .2s;
 }
