--- a/style.css
+++ b/style.css
@@ -77,6 +77,17 @@ h1 {
   margin-top: 15px;
 }
 
+.medalArea {
+  cursor: Pointer;
+}
+
+.medalArea.lv46 {
+	border:1px solid black;
+	position:absolute;
+	width:33px; 
+	height:34px;
+}
+
 .medalArea.lv47 {
 	border:1px solid transparent;
 	position:absolute;
@@ -96,6 +107,13 @@ h1 {
 	position:absolute;
 	width:42px; 
 	height:42px;
+}
+
+.medalArea.lv50 {
+	border:1px solid transparent;
+	position:absolute;
+	width:57px; 
+	height:58px;
 }
 
 .medal {
